/* Class = "UILabel"; text = "Use fingerprint to unlock"; ObjectID = "2hl-z9-Z9I"; */
"2hl-z9-Z9I.text" = "Use biometrics to unlock";

/* Class = "UISwitch"; accessibilityLabel = "Use fingerprint to unlock"; ObjectID = "N4H-yE-iCk"; */
"N4H-yE-iCk.accessibilityLabel" = "Use biometrics to unlock";

/* Class = "UIButton"; normalTitle = "Sign In"; ObjectID = "SaI-s3-PvD"; */
"SaI-s3-PvD.normalTitle" = "Sign In";

/* Class = "UILabel"; text = "Use fingerprint to unlock"; ObjectID = "TCG-SB-18W"; */
"TCG-SB-18W.text" = "Use biometrics to unlock";

/* Class = "UITextField"; placeholder = "Password"; ObjectID = "cb7-zo-SNF"; */
"cb7-zo-SNF.placeholder" = "Password";

/* Class = "UIButton"; normalTitle = "Cancel"; ObjectID = "dBE-Te-rAK"; */
"dBE-Te-rAK.normalTitle" = "Cancel";

/* Class = "UITextField"; placeholder = "User Name"; ObjectID = "deE-wm-pJ1"; */
"deE-wm-pJ1.placeholder" = "User Name";

/* Class = "UIButton"; normalTitle = "Button"; ObjectID = "lTf-2H-GuK"; */
"lTf-2H-GuK.normalTitle" = "Button";

/* Class = "UINavigationItem"; title = "Sign In"; ObjectID = "rQD-yx-JzM"; */
"rQD-yx-JzM.title" = "Sign In";

/* Class = "UITextView"; text = "Please contact your institution’s IT staff for assistance with login."; ObjectID = "rjC-kC-UYk"; */
"rjC-kC-UYk.text" = "Please contact your institution’s IT staff for assistance with login.";

/* Class = "UILabel"; text = "Stay signed in"; ObjectID = "rqP-WS-xnh"; */
"rqP-WS-xnh.text" = "Stay signed in";

/* Class = "UILabel"; text = "Device passcode is required to stay signed in"; ObjectID = "sm7-yB-Dor"; */
"sm7-yB-Dor.text" = "Device passcode is required to stay signed in";

/* Class = "UISwitch"; accessibilityLabel = "Stay signed in"; ObjectID = "t3D-1t-4pB"; */
"t3D-1t-4pB.accessibilityLabel" = "Stay signed in";

/* Class = "UINavigationItem"; title = "Sign In"; ObjectID = "zgo-mK-goA"; */
"zgo-mK-goA.title" = "Sign In";

